--- a/PorterAndMoon/appsettings.json
+++ b/PorterAndMoon/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString" :"Server = localhost; Database = PorterAndMoon; Trusted_Connection = True;"
 }
