--- a/PorterAndMoon/ClientApp/package.json
+++ b/PorterAndMoon/ClientApp/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.3.1",
     "firebase": "^6.0.4",
     "node-sass": "^4.12.0",
     "react": "^16.0.0",
@@ -12,7 +12,7 @@
     "react-dom": "^16.0.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^3.0.1",
     "reactstrap": "^8.0.0",
     "rimraf": "^2.6.2"
   },
@@ -21,5 +21,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
