--- a/.gitignore
+++ b/.gitignore
@@ -233,3 +233,6 @@ _Pvt_Extensions
 # FAKE - F# Make
 .fake/
 PorterAndMoon/ClientApp/src/data/apiKeys.js
+.vs
+.vscode
+PorterAndMoon\ClientApp\package-lock.json
