--- a/.gitignore
+++ b/.gitignore
@@ -237,4 +237,4 @@ _Pvt_Extensions
 PorterAndMoon/ClientApp/src/data/apiKeys.js
 .vs
 .vscode
-PorterAndMoon\ClientApp\package-lock.json
+PorterAndMoon/ClientApp/package-lock.json
